--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -36,7 +36,7 @@
             <item
                 android:id="@+id/us"
                 android:icon="@drawable/phn"
-                android:title="Aboutus" />
+                android:title="About Us" />
         </menu>
     </item>
 
