--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,53 +9,97 @@
     tools:context=".Login">
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="match_parent"
+        android:id="@+id/AppLogo"
+        android:layout_width="200dp"
         android:layout_height="200dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo_transparent" />
 
-        app:srcCompat="@drawable/flogo"
-        />
     <EditText
-        android:layout_width="match_parent"
+        android:id="@+id/emailUser"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:hint="UID"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:gravity="center"
-        />
+        android:textColor="#ffffff"
+        android:textColorHint="#373737"
+        android:hint="Email ID"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/AppLogo" />
+
     <EditText
-        android:layout_width="match_parent"
+        android:id="@+id/userPassword"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:paddingTop="40dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="8dp"
+        android:gravity="center"
         android:hint="Password"
-        android:gravity="center"
-        android:inputType="textPassword"/>
+        android:textColor="#ffffff"
+        android:textColorHint="#373737"
+        android:inputType="textPassword"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/emailUser" />
 
     <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-           
-            android:text="LOG IN"
-
-            android:onClick="gotomain"
-            android:layout_gravity="center"/>
-
-    <Button
-
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:text="Have a Trial Version"
-            android:gravity="center"
-            android:onClick="go2main"
-               android:layout_gravity="center"/>
-
-    <Button
-        android:layout_width="wrap_content"
+        android:id="@+id/loginB"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:paddingTop="40dp"
         android:layout_gravity="center"
-        android:text="Forgot Password"/>
+        android:layout_marginStart="8dp"
+        android:background="#d0c2185b"
+        android:textColor="#FFFFFF"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="8dp"
+        android:onClick="gotomain"
+        android:text="LOG IN"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/userPassword" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/signupB"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginStart="8dp"
+        android:background="#d0c2185b"
+        android:textColor="#FFFFFF"
+        android:layout_marginTop="408dp"
+        android:layout_marginEnd="8dp"
+        android:gravity="center"
+        android:onClick="go2main"
+        android:text="Sign Up"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="#d0c2185b"
+        android:textColor="#FFFFFF"
+        android:id="@+id/forgotB"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="Forgot Password ?"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signupB" />
+
+</android.support.constraint.ConstraintLayout>
 
 
 
