--- a/app/src/main/res/layout/frag_top.xml
+++ b/app/src/main/res/layout/frag_top.xml
@@ -4,6 +4,8 @@
     android:layout_width="match_parent"
     android:id="@+id/TOPFRAGGER"
     android:layout_height="match_parent"
-    tools:context=".Battery">
+    tools:context=".Battery"
+    >
+
 
 </FrameLayout>
