--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -28,6 +28,7 @@
             <item
                 android:id="@+id/mail"
                 android:icon="@drawable/mail"
+                android:onClick="mail"
                 android:title="Email" />
             <item
                 android:id="@+id/num"
