--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -19,7 +19,6 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/chargin1"
-        android:layout_weight="8"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,7 +31,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
-        android:layout_weight="1"
         android:background="@android:color/transparent"
         android:onClick="checkBattery"
         android:text="Battery"
@@ -50,10 +48,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
-        android:layout_weight="1"
         android:background="@android:color/transparent"
         android:onClick="checkDoorLocked"
-        android:text="Doorlock"
+        android:text="Door Lock"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
@@ -68,7 +65,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
-        android:layout_weight="1"
         android:background="@android:color/transparent"
         android:onClick="FillingStationsList"
         android:text="Filling Stations"
@@ -86,7 +82,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
-        android:layout_weight="1"
         android:background="@android:color/transparent"
         android:onClick="RunTime"
         android:text="Run Time"
